--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <a href="../index.html">My Blog</a>
+        <a href="https://thinhtran2412.github.io/Portfolio/">My Blog</a>
     </nav>
     <header>
         <h1>Top Game of the Year</h1>
